added some text

--- a/cartoons.html
+++ b/cartoons.html
@@ -1,10 +1,14 @@
 ---
 layout: page
 title: Cartoons
-subtitle: and other science-related artwork I've made for talks and outreach. 
+subtitle: and other science-related artwork
 use-site-title: true
+social-share: true
 ---
-Please credit
+
+I've occasionally made cartoons to explain (mostly cosmology-related) concepts for talks or other outreach projects. You're welcome to use any of these images for talks or similar, but if you do, please credit me in the text associated with the image.  You don't need to ask my permission, but I'd be interested in hearing about it if you do use any of the images here for something!
+
+I also have higher resolution versions of several of them, or individual frames of gifs, which I could provide upon request.
 
 <div class="posts-list">
   {% for post in paginator.posts %}
