--- a/cartoons/index.html
+++ b/cartoons/index.html
@@ -6,11 +6,11 @@ use-site-title: true
 social-share: true
 ---
 
-I've occasionally made cartoons to explain (mostly cosmology-related) concepts for talks or other outreach projects. You're welcome to use any of these images for talks or similar, but if you do, please credit me in the text associated with the image.  You don't need to ask my permission, but I'd be interested in hearing about it if you do use any of the images here for something!
+<p>I've occasionally made cartoons to explain (mostly cosmology-related) concepts for talks or other outreach projects. You're welcome to use any of these images for talks or similar, but if you do, please credit me in the text associated with the image.  You don't need to ask my permission, but I'd be interested in hearing about it if you do use any of the images here for something!<p>
 
-I also have higher resolution versions of several of the images and individual frames of gifs, which I could provide upon request.
+<p>I also have higher resolution versions of several of the images and individual frames of gifs, which I could provide upon request.<p>
 
-### _**UNDER CONSTRUCTION*_
+<hr>
 
 <div class="posts-list">
   {% for post in paginator.posts %}
