debugging photo inclusion

--- a/cartoons/index.html
+++ b/cartoons/index.html
@@ -6,9 +6,9 @@ use-site-title: true
 social-share: true
 ---
 
-<p>I've occasionally made cartoons to explain (mostly cosmology-related) concepts for talks or other outreach projects. They are shared below (or will be eventually). <p>
+<p>I've occasionally made cartoons to explain (mostly cosmology-related) concepts for talks or other outreach projects. They are shared below (or will be eventually). </p>
 
- <p><small> You're welcome to use any of these images for talks or similar, but if you do, please credit me in the text associated with the image.  You don't need to ask my permission, but I'd be interested in hearing about it if you do use any of the images here for something! I also have higher resolution versions of several of the images and individual frames of gifs, which I could provide upon request.<p>
+ <p><small> You're welcome to use any of these images for talks or similar, but if you do, please credit me in the text associated with the image.  You don't need to ask my permission, but I'd be interested in hearing about it if you do use any of the images here for something! I also have higher resolution versions of several of the images and individual frames of gifs, which I could provide upon request.</p>
 
 <hr>
 
