--- a/cartoons/index.html
+++ b/cartoons/index.html
@@ -28,17 +28,17 @@ social-share: true
   {% include pagination.html %}
 </div>
 
-{% if paginator.total_pages > 1 %}
-<ul class="pager main-pager">
-  {% if paginator.previous_page %}
-  <li class="previous">
-    <a href="{{ paginator.previous_page_path | relative_url }}">&larr; Newer Posts</a>
-  </li>
-  {% endif %}
-  {% if paginator.next_page %}
-  <li class="next">
-    <a href="{{ paginator.next_page_path | relative_url }}">Older Posts &rarr;</a>
-  </li>
-  {% endif %}
-</ul>
-{% endif %}
+<!-- {% if paginator.total_pages > 1 %} -->
+<!-- <ul class="pager main-pager"> -->
+<!--   {% if paginator.previous_page %} -->
+<!--   <li class="previous"> -->
+<!--     <a href="{{ paginator.previous_page_path | relative_url }}">&larr; Newer Posts</a> -->
+<!--   </li> -->
+<!--   {% endif %} -->
+<!--   {% if paginator.next_page %} -->
+<!--   <li class="next"> -->
+<!--     <a href="{{ paginator.next_page_path | relative_url }}">Older Posts &rarr;</a> -->
+<!--   </li> -->
+<!--   {% endif %} -->
+<!-- </ul> -->
+<!-- {% endif %} -->
