changing grid size

--- a/cartoons/index.html
+++ b/cartoons/index.html
@@ -1,4 +1,4 @@
----
+cd ---
 layout: page
 title: Cartoons
 subtitle: and other science-related artwork
@@ -13,7 +13,7 @@ social-share: true
 <hr>
 
 <div class="posts">
-  <div class="grid-xlarge">
+  <div class="grid"> <!-- #-xlarge"> -->
     <div class="posts__container" itemscope itemtype="http://schema.org/Blog" data-columns>
 
       {% for post in paginator.posts %}
