--- a/cartoons/index.html
+++ b/cartoons/index.html
@@ -13,7 +13,7 @@ social-share: true
 <hr>
 
 <div class="posts">
-  <div class="grid"> <!-- #-xlarge"> -->
+  <div class="grid-small">
     <div class="posts__container" itemscope itemtype="http://schema.org/Blog" data-columns>
 
       {% for post in paginator.posts %}
