edited cartoon header text

--- a/cartoons/index.html
+++ b/cartoons/index.html
@@ -6,9 +6,9 @@ use-site-title: true
 social-share: true
 ---
 
-<p>I've occasionally made cartoons to explain concepts for talks or other outreach projects. They are shared below. (Note that the  thumbnails are distorted or don't all show the full image.) </p>
+<p>See below for cartoons or other science-related artwork that I've made for talks or other outreach projects. (Note that the  thumbnails are distorted or don't all show the full image.) </p>
 
- <p><small> <em>You're welcome to use any of these images, but please credit me in the text associated with the image if you do so.   I also have higher resolution versions of several of the images and individual frames of gifs, which I could provide upon request.</em></p>
+ <p><small> <em>You're welcome to use any of these images, but please credit me if you do so.   I can provide higher resolution versions of several of the images and individual frames of gifs upon request.</em></p>
 
 <hr>
 
