cartoon credit info update

--- a/cartoons/index.html
+++ b/cartoons/index.html
@@ -8,7 +8,7 @@ social-share: true
 
 <p>See below for cartoons or other science-related artwork that I've made for talks or other outreach projects. Note that the  thumbnails are distorted or don't all show the full image. </p>
 
- <p><small> <em>You're welcome to use any of these images, but please credit me if you do.   I can provide higher resolution versions of several of the images and individual frames of gifs upon request. For many of the  digital illustrations, I'm also happy to provide versions with the image text in other languages, if given a translation and enough notice. </em></p>
+ <p><small> <em>You're welcome to use any of these images for non-commercial purposes, but please credit me if you do.   I can provide higher resolution versions of several of the images and individual frames of gifs upon request. For many of the  digital illustrations, I'm also happy to provide versions with the image text in other languages, if given a translation and enough notice. </em></p>
 
 <hr>
 
